# agentmesh

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile   README.md  ROADMAP.md  conftest.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
agentmesh/: __init__.py
agentmesh/api/: schemas.py  server.py
agentmesh/api/routes/: attack.py  health.py  identity.py  policy.py  ws.py
agentmesh/audit/: __init__.py  exceptions.py  storage.py  trail.py
agentmesh/identity/: agent_identity.py  credential_store.py  exceptions.py
agentmesh/monitor/: __init__.py  anomaly_detector.py  captured_call.py  exceptions.py  injection_detector.py  interceptor.py
agentmesh/monitor/_ext/: CMakeLists.txt  interceptor_core.cpp
agentmesh/monitor/patterns/: injection_patterns.yaml
agentmesh/policy/: __init__.py  defaults.yaml  engine.py  exceptions.py  schema.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentActivity.tsx  AttackLab.tsx  AuditLog.tsx  PolicyViolations.tsx  StatusBar.tsx
demo/: README.md  __init__.py  agents.py  policy.yaml  run_demo.py  tools.py
demo/output/: summary.md
docs/: GOOD_FIRST_ISSUES.md
docs/security/: THREAT_MODEL.md
examples/langchain_secured/: README.md  basic_agent.py
examples/policy_examples/: 01_simple_two_agent.yaml  02_strict_rate_limits.yaml  03_strict_isolation.yaml  04_readonly_agent.yaml  05_multi_tier_orchestrator.yaml
integrations/: __init__.py
integrations/langchain/: __init__.py  adapter.py  exceptions.py
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: client.ts  identity.ts  index.ts  types.ts
sdk/tests/: client.test.ts
tests/integration/: test_interceptor.py  test_langchain_adapter.py
tests/security/: test_adversarial.py  test_known_gaps.py  test_red_team.py
tests/unit/: test_api.py  test_audit.py  test_identity.py  test_monitor.py  test_policy.py
